--- a/style.css
+++ b/style.css
@@ -1,6 +1,7 @@
 body,
 html {
   height: 100%;
+  font-family: 'Playfair Display', serif;
 }
 
 #main-content {
@@ -25,7 +26,15 @@ html {
 
 #reload {
   font-weight: 900;
-  font-size: 1.4rem;
-  padding: .5rem;
+  font-size: 1.7rem;
+  padding: .6rem;
   background-color: burlywood;
+}
+
+p {
+  font-size: 1.3rem;
+}
+
+h4 {
+  font-size: 1.3rem;
 }
