--- a/style.css
+++ b/style.css
@@ -1,7 +1,7 @@
 body,
 html {
   height: 100%;
-  font-family: 'Playfair Display', serif;
+  font-family: 'Roboto', sans-serif;
 }
 
 #main-content {
